<resources>
    <string name="app_name">Panacee</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="user_name">Username</string>
    <string name="mobile_no">Mobile number</string>
    <string name="mobile_or_email">Mobile/Email</string>
    <string name="password">Password</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up_here">New User? Sign Up Here!</string>
    <string name="mobile">Mobile numbe</string>

    // signup
    <string name="register_with_panacee">Register with Panacee</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>

    <string name="forgot_your_password">Forgot your password?</string>
    <string name="support">Support</string>
    <string name="signup">Sign Up</string>


    // Set error
    <string name="fill_password">Fill password</string>
    <string name="fill_mobile">Fill mobile number</string>
    <string name="fill_mandatory">Fill mandatory</string>

    <string name="enter_otp">Enter otp</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend otp</string>

    <string name="skip">SKIP >></string>

    // Categories
    <!--<string name="all_ceramic_restorations">ALL CERAMIC RESTORATIONS</string>-->
    <string name="all_ceramic_restorations">All ceramic restorations</string>
    <!--<string name="hybrid_ceramic_restorations">HYBRID CERAMIC RESTORATIONS</string>-->
    <string name="hybrid_ceramic_restorations">Hybrid ceramic restoration</string>
    <!--<string name="zirconia_restorations">ZIRCONIA RESTORATIONS</string>-->
    <string name="zirconia_restorations">Zirconia resstorations</string>
    <!--<string name="zirconia_implant_restoration">ZIRCONIA IMPLANT RESTORATIONS</string>-->
    <string name="zirconia_implant_restoration">Zirconia implant restorations</string>

    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="categories">Categories</string>
    <string name="guest_user">Guest</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="string_commit_test">Commit test</string>


    <string name="work_order_form">WORK ORDER FORM</string>
    // Page #1
    <string name="order_date">Order Date :</string>
    <string name="work_req_on">Work Required on :</string>
    <string name="order_no">ORDER No. :</string>

    <string name="dr">Dr.</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="place">Place</string>
    <string name="ph">Ph :</string>
    <string name="patient_name">Patient Name</string>
    <string name="age_sex">Age / Sex</string>

    <string name="new_case">New Case</string>
    <string name="continuation_of_case">Continuation of Case(Old Case Ref.</string>
    <string name="remake_or_redo">Remake or Redo,(Old case Ref.</string>

    <string name="stump_shade">Stump Shade</string>
    <string name="final_shade">Final Shade</string>
    <string name="incisal_translucency">Incisal Translucency</string>

    <string name="type_of_work">Type of Work</string>
    <string name="inlayonlay">Inlay / Onlay</string>
    <string name="fpd">FPD</string>
    <string name="crown">Crown</string>
    <string name="marlylad">MarlyLand</string>
    <string name="veneer">Veneer</string>
    <string name="cantmever">Cantmever</string>

    <string name="material">Material</string>
    <string name="all_ceramic">All Ceramic</string>
    <string name="hybrid_ceramic">Hybrid Ceramic</string>
    <string name="monolith_zirconia">Monolith Zirconia</string>
    <string name="pmma">PMMA</string>

    <string name="screw_retained">Screw Retained</string>
    <string name="cemented">Cemented</string>

    <string name="checklist">Check List</string>
    <string name="max_model_impression">Max Model / Impression</string>
    <string name="mand_model_impression">Mand Model / Impression</string>
    <string name="implant_driver">Implant Driver</string>
    <string name="lab_analog">Lab Analog</string>
    <string name="lab_screw">Lab Screw</string>
    <string name="others">Others</string>

    <string name="pontic_design">Pontic Design</string>
    <string name="modified_ridge_lap">Modified Ridge Lap</string>
    <string name="ridge_lap">Ridge Lap</string>
    <string name="sanitary">Sanitary</string>
    <string name="ovate">Ovate</string>
    <string name="special_instruction">Special Instructions</string>

    <string name="result">result</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
    </string-array>

    <string name="try_again_later">Try again later</string>
    <string name="response">response</string>
    <style name="my_orders">My orders</style>
</resources>
